--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -58,9 +58,8 @@ h3{
   color: #ffffff;
 }
 
-/* App.css */
 ul li {
-  color: #ffffff; /* Replace with your desired text color */
+  color: #ffffff; 
 }
 
 button {
